fix: add open sans bold

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - "resume.typ"
       - "config.toml"
+      - "fonts/**"
       - ".github/workflows/build.yml"
 
 name: build
