--- a/config.toml
+++ b/config.toml
@@ -20,13 +20,14 @@ skills = [
 	"JavaScript", "HTML", "CSS", "Svelte", "Vue", "React", "SvelteKit", "Nuxt", "Next.js",
 	"GSAP (GreenSock)", "Flutter", "Express.js", "Fastify", "Axum", "tRPC", "JSONSchema",
 	"OpenAPI", "Swagger", "Zod", "Drizzle", "Diesel", "PyTorch", "TensorFlow", "Keras", "Gerrit",
-	"Jira", "Confluence", "Skia", "wgpu", "OpenStack", "Docker", "Unity", "Bevy", "Git", "Gerrit"
+	"Jira", "Confluence", "Skia", "wgpu", "OpenStack", "Docker", "Unity", "Bevy", "Git", "Gerrit",
+	"Ansible"
 ]
 
 keywords = ["resume", "curriculum vitae", "cv", "software engineer", "developer", "programmer"]
 
 [education]
-blurb = "Looking for a *May 2024*, 4-month position"
+blurb = "Looking for a *January 2025*, 4-month position"
 degree = "Co-op Honours Bachelor of Computer Science"
 school = "University of Ottawa"
 graduation = "Expected 2026"
@@ -38,8 +39,8 @@ location = "Ottawa, ON (Remote)"
 start = 2023-05-01
 achievements = [
 	"Authored a code ownership and test management API with *Express.js*, *Zod*, *Node.js*, and *MongoDB* that improved workflow efficiency and test coverage by 25%.",
-	"Developed a log query tool with *Flask*, *Vue*, and *TailwindCSS* that increased debugging efficiency by 30%.",
-	"Upgraded and improved a computing management tool with *Python*, *OpenStack*, and *Jenkins* that reduced downtime and failures by 15%.",
+	"Developed a log query tool with *Flask*, *Vue*, and *TailwindCSS* that increased error discovery by 30%.",
+	"Upgraded and improved a computing management tool with *Python*, *OpenStack*, and *Ansible* that reduced downtime and failures by 15%.",
 	"Implemented a full-stack computing resource booking platform with *Vue*, *Nuxt*, *PostgreSQL*, and *tRPC* that reduced resource conflicts by 20%."
 ]
 
