feat: add major to config

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,8 @@ name = "Matthew Polak"
 phone = "+1 (519) 362-9413"
 location = "Ontario, Canada"
 
+major = "Computer Science"
+
 email = "me@matteopolak.com"
 website = "matteopolak.com"
 github = "matteopolak"
